Registration and Login add with FirebaseFirestore
User class updated.
User Registration UI updated
User Login UI updated

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -157,7 +157,7 @@
         android:text="tpg reseller 2018-2020" />
 
     <TextView
-        android:id="@+id/playerid"
+        android:id="@+id/etPlayerId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
