--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -6,19 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#1B3821"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:paddingEnd="10dp"
+    android:paddingStart="10dp"
     tools:context="com.tpr.andromeda.teenpattireseller.LoginScreen">
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:stretchColumns="1">
+        android:layout_height="wrap_content"
+        android:stretchColumns="0">
 
-        <LinearLayout
-            android:id="@+id/lrlogo"
+        <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginBottom="10dp">
 
             <ImageView
                 android:id="@+id/imageView_logo"
@@ -26,39 +28,28 @@
                 android:layout_height="90sp"
                 android:layout_gravity="center"
                 android:src="@drawable/logo_rseller" />
+        </TableRow>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Login Here"
-                android:textColor="#ffffff"
-                android:textSize="20dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/playeridlr"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/lrlogo">
+            android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/playerid"
+                android:id="@+id/etPlayerId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_grade_black_24dp"
                 android:drawablePadding="16dp"
                 android:hint="Player Id"
                 android:textColorHint="#d2d2d2" />
-        </LinearLayout>
+        </TableRow>
 
-        <LinearLayout
-            android:id="@+id/passwordlr"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/playeridlr">
+            android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/etUserPass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_lock24dp"
@@ -66,53 +57,67 @@
                 android:hint="Password"
                 android:inputType="numberPassword"
                 android:textColorHint="#d2d2d2" />
-        </LinearLayout>
+        </TableRow>
 
-        <Button
-            android:id="@+id/loginbtn"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/passwordlr"
-            android:layout_margin="20dp"
-            android:background="#FF5722"
-            android:onClick="logbtn"
-            android:padding="16dp"
-            android:text="Login"
-            android:textColor="#ffffff"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btnLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="#FF5722"
+                android:padding="5dp"
+                android:text="Login"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No account yet?" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:text="Register Now"
+                    android:textColor="#f44336" />
+            </LinearLayout>
+        </TableRow>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/btnRegister"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="No Account Yet?" />
-
-            <TextView
-                android:id="@+id/etlogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Register Now"
-                android:textColor="#f44336" />
+                android:layout_margin="10dp"
+                android:background="#66BB6A"
+                android:onClick="regbtn"
+                android:padding="5dp"
+                android:text="Register"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/registerbtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/loginbtn"
-            android:layout_margin="20dp"
-            android:background="#66BB6A"
-            android:onClick="regbtn"
-            android:padding="16dp"
-            android:text="Register"
-            android:textColor="#ffffff"
-            android:textSize="20dp"
-            android:textStyle="bold" />
 
     </TableLayout>
 </ScrollView>
