--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -5,41 +5,34 @@
     android:id="@+id/register_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusableInTouchMode="true"
+    android:focusable="true"
     android:background="#1B3821"
+    android:paddingEnd="10dp"
+    android:paddingStart="10dp"
     tools:context="com.tpr.andromeda.teenpattireseller.RegisterScreen">
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:stretchColumns="1">
+        android:layout_height="wrap_content"
+        android:stretchColumns="0">
 
-        <LinearLayout
-            android:id="@+id/lrlogo"
+        <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_marginBottom="10dp"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageView_logo"
                 android:layout_width="100sp"
                 android:layout_height="90sp"
-                android:layout_gravity="center"
                 android:src="@drawable/logo_rseller" />
+        </TableRow>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Please Create An Account"
-                android:textColor="#ffffff"
-                android:textSize="20dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/usernamelr"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/lrlogo">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/etusername"
@@ -47,16 +40,14 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_user24dp"
                 android:drawablePadding="16dp"
-                android:inputType="text"
                 android:hint="Enter Your Full Name"
+                android:inputType="text"
                 android:textColorHint="#d2d2d2" />
-        </LinearLayout>
+        </TableRow>
 
-        <LinearLayout
-            android:id="@+id/playeridlr"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/usernamelr">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/etplayerid"
@@ -66,13 +57,11 @@
                 android:drawablePadding="16dp"
                 android:hint="Enter Your Player Id"
                 android:textColorHint="#d2d2d2" />
-        </LinearLayout>
+        </TableRow>
 
-        <LinearLayout
-            android:id="@+id/phonelr"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/playeridlr">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/etphoneno"
@@ -80,15 +69,14 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_phone24dp"
                 android:drawablePadding="16dp"
-                android:inputType="phone"
                 android:hint="Enter Your Mobile No"
+                android:inputType="phone"
                 android:textColorHint="#d2d2d2" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/crlr"
+        </TableRow>
+
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/phonelr">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/etcramount"
@@ -96,16 +84,15 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_money_24dp"
                 android:drawablePadding="16dp"
-                android:inputType="number"
+                android:text="0"
                 android:hint="Enter Total CR You Have"
+                android:inputType="numberDecimal"
                 android:textColorHint="#d2d2d2" />
-        </LinearLayout>
+        </TableRow>
 
-        <LinearLayout
-            android:id="@+id/passwordlr"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/phonelr">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/etpassword"
@@ -116,13 +103,11 @@
                 android:hint="Enter Your Password"
                 android:inputType="numberPassword"
                 android:textColorHint="#d2d2d2" />
-        </LinearLayout>
+        </TableRow>
 
-        <LinearLayout
-            android:id="@+id/confirmpasswordlr"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/passwordlr">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/etconfirmpassword"
@@ -130,65 +115,76 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_lock24dp"
                 android:drawablePadding="16dp"
-                android:inputType="numberPassword"
                 android:hint="Please Confirm Your Password"
+                android:inputType="numberPassword"
                 android:textColorHint="#d2d2d2" />
-        </LinearLayout>
+        </TableRow>
 
-
-        <Button
-            android:id="@+id/registerbtn"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/confirmpasswordlr"
-            android:layout_margin="10dp"
-            android:background="#66BB6A"
-            android:onClick="regbtn"
-            android:padding="5dp"
-            android:text="Register"
-            android:textColor="#ffffff"
-            android:textSize="16dp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btnRegister"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="#66BB6A"
+                android:padding="5dp"
+                android:text="Register"
+                android:textColor="#ffffff"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+        </TableRow>
+
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Already Has An Account?" />
+
+                <TextView
+                    android:id="@+id/etlogin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:text="Login Now"
+                    android:textColor="#f44336" />
+            </LinearLayout>
+        </TableRow>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/btnLogin"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Already Has An Account?" />
-
-            <TextView
-                android:id="@+id/etlogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Login Now"
-                android:textColor="#f44336" />
+                android:layout_margin="10dp"
+                android:background="#FF5722"
+                android:padding="5dp"
+                android:text="Login"
+                android:textColor="#ffffff"
+                android:textSize="16dp"
+                android:textStyle="bold" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/loginbtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/registerbtn"
-            android:layout_margin="10dp"
-            android:background="#FF5722"
-            android:onClick="logbtn"
-            android:padding="5dp"
-            android:text="Login"
-            android:textColor="#ffffff"
-            android:textSize="16dp"
-            android:textStyle="bold" />
-
 
         <ProgressBar
             android:id="@+id/progressbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone" />
-
 
     </TableLayout>
 </ScrollView>
