--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -101,7 +101,6 @@
                 android:drawableLeft="@drawable/ic_lock24dp"
                 android:drawablePadding="16dp"
                 android:hint="Enter Your Password"
-                android:inputType="numberPassword"
                 android:textColorHint="#d2d2d2" />
         </TableRow>
 
@@ -116,7 +115,6 @@
                 android:drawableLeft="@drawable/ic_lock24dp"
                 android:drawablePadding="16dp"
                 android:hint="Please Confirm Your Password"
-                android:inputType="numberPassword"
                 android:textColorHint="#d2d2d2" />
         </TableRow>
 
@@ -133,7 +131,7 @@
                 android:padding="5dp"
                 android:text="Register"
                 android:textColor="#ffffff"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
         </TableRow>
 
@@ -176,7 +174,7 @@
                 android:padding="5dp"
                 android:text="Login"
                 android:textColor="#ffffff"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
