--- a/app/src/main/res/layout/layout_custome_dialogue_giftchip.xml
+++ b/app/src/main/res/layout/layout_custome_dialogue_giftchip.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#1B3821"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:padding="15dp">
 
     <LinearLayout
         android:id="@+id/first"
@@ -13,23 +11,16 @@
         android:orientation="vertical">
 
         <TextView
-            android:background="#000000"
             android:id="@+id/tVgiftChips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="How Many CR You Want To Gift?"
-            android:textColor="#ffffff" />
+            android:text="How many CR you want to gift?" />
 
         <EditText
-            android:inputType="number"
-            android:id="@+id/eTgiftChips"
+            android:id="@+id/etTotalGiftChips"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="12dp"
-            android:padding="15dp" />
-
-        <requestFocus />
+            android:inputType="number" />
     </LinearLayout>
 
     <LinearLayout
@@ -40,27 +31,15 @@
         android:orientation="vertical">
 
         <TextView
-            android:background="#000000"
             android:id="@+id/tVplayerId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Enter Player Id You Want To Gift CR"
-            android:textColor="#ffffff" />
+            android:text="Enter player id you want to gift CR?" />
 
         <EditText
-            android:inputType="text"
-            android:id="@+id/eTplayerId"
+            android:id="@+id/etReceiverId"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="12dp"
-            android:padding="15dp" />
-
-        <requestFocus />
+            android:inputType="text" />
     </LinearLayout>
-
-
-    <!-- first row of the table layout-->
-
-
 </RelativeLayout>
