--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -100,6 +100,7 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_lock24dp"
                 android:drawablePadding="16dp"
+                android:inputType="textPassword"
                 android:hint="Enter Your Password"
                 android:textColorHint="#d2d2d2" />
         </TableRow>
@@ -114,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_lock24dp"
                 android:drawablePadding="16dp"
+                android:inputType="textPassword"
                 android:hint="Please Confirm Your Password"
                 android:textColorHint="#d2d2d2" />
         </TableRow>
